# twitter

./: .gitignore  Makefile  docker-compose.dev.yml
server/: Cargo.toml
server/crates/api/: Cargo.toml
server/crates/api/src/: main.rs
server/crates/api/src/infrastructure/config/: routes.rs
server/crates/authentication/: Cargo.toml
server/crates/authentication/src/application/login/dto/: payload.rs
server/crates/authentication/src/application/login/use_case/: handler.rs
server/crates/authentication/src/application/register/dto/: payload.rs
server/crates/authentication/src/application/register/use_case/: handler.rs
server/crates/authentication/src/domain/: authentication_error.rs  mod.rs  token_repository.rs  user.rs  user_repository.rs  user_session.rs
server/crates/authentication/src/infrastructure/: error.rs  mod.rs
server/crates/authentication/src/infrastructure/config/: routes.rs  state.rs
server/crates/authentication/src/infrastructure/controller/: authentication_controller.rs
server/crates/authentication/src/infrastructure/repository/: user_repository.rs
server/crates/authentication/src/infrastructure/service/: password_service.rs  token_service.rs
server/crates/database/: Cargo.toml
server/crates/database/src/: connection.rs
server/migrations/: 20260511145249_create_users_table.up.sql
