[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
axum = "0.7"
dotenvy = "0.15"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
uuid = { version = "1", features = ["v7", "serde"]}
tower-http = { version = "0.5", features = ["cors", "trace"] }
sqlx = { version = "0.8", features = ["uuid", "postgres", "runtime-tokio", "macros"] }

