[package]
name = "authentication"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }

uuid.workspace = true
axum.workspace = true
strum.workspace = true
serde.workspace = true
database.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["chrono"] }
